--- a/SourceCode/project/index.html
+++ b/SourceCode/project/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>盖讯通-web-im</title>
+    <script src="static/js/RongIMLib-2.2.5.min.js"></script>
+    <script src="static/js/Libamr-2.2.5.min.js"></script>
+    <script src="static/js/RongIMVoice-2.2.5.min.js"></script>
+    <script src="static/js/RongEmoji-2.2.5.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
