--- a/SourceCode/server/client/index.html
+++ b/SourceCode/server/client/index.html
@@ -73,7 +73,7 @@
 						<div class="socket-input">
 							<form onsubmit="return false">
 								<div class="input" contenteditable="true"></div>
-								<button>发送</button>
+								<button onclick="sendTextMessage()">发送</button>
 							</form>
 						</div>
 					</div>
@@ -83,97 +83,158 @@
 		</div>
 		<!--在线对话结束-->
 
-        <script src="./js/jquery-1.9.1.js" type="text/javascript"></script>
-        <script src="./js/face.js"></script>
-        <script src="./js/RongIMLib-2.2.5.js"></script>
-        <script src="./js/RongEmoji-2.2.5.js"></script>
-        <script src="./js/init.js"></script>
-        <script src="app.config.js"></script>
-        <script>
-            function startInit(user,targetId){
-                //取得用户TOKEN
-                var userToken = '';//'IuCwRjR4tGbOXcQuNIWULjT7Xa7E7kGnu91Y1IDOAT1cGiFkQhJwistQ5R/e7zzYzaOjhJOR7m2Lm1sd+lOXXbuhy4clzAzf';
-                $.ajax({
-                    url: window.__sealtalk_config.serverUrl + "/user/get_token",
-                    data:'',//怎么取得用户的盖网ID
-                    dataType: 'json',
-                    success: function(data){
-                        console.log(data);
-                        if(data.code == 200){
-                            userToken = data.result.token;
-                        }else{
-                            console.log('获取TOKEN失败!');
-                        }
-                    },
-                    error: function(){
-                    }
-                }).then(function(){
-                    var params = {
-                        appKey : window.__sealtalk_config.appkey,
-                        token : userToken,
-                        navi : ''
-                    };
-                    var callbacks = {
-                        getInstance : function(instance){
-                            // RongIMLib.RongIMEmoji.init();
-                            //instance.sendMessage
-                        },
-                        getCurrentUser : function(userInfo){
-                            console.log(userInfo.userId);
-                            alert("链接成功；userid=" + userInfo.userId);
-                            //连接成功初始处理
-                        },
-                        receiveNewMessage : function(message){
-                            //接收信息处理
-                        }
-                    };
-                    init(params,callbacks);
-                });
+    <script src="./js/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="./js/face.js"></script>
+    <script src="./js/RongIMLib-2.2.5.js"></script>
+    <script src="./js/RongEmoji-2.2.5.js"></script>
+    <script src="./js/init.js"></script>
+    <script src="app.config.js"></script>
+    <script>
+        instance = ''; //初始
+
+        //取得URL参数数据
+        function getQueryString(name) {
+                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");  
+                var r = window.location.search.substr(1).match(reg);  
+                if (r != null) return unescape(r[2]);  
+                return null;  
             }
-        </script>
-		<script>
-			$(function(){
-				/*在线咨询图片*/
-				$('#img_upload').change(function(){
-					var file=this.files[0];
-					var reader=new FileReader();
- 					reader.readAsDataURL(file);
- 					reader.onload=function(){
-						var img="<img src='"+this.result+"'>";
-						$('.socket-input .input').append(img);
-					 }
-				})
-               	/*在线咨询表情*/
-               	$('.socket-face .face').click(function(){
-               		$('.face-box').toggle();
-               	});
-
-                for(var i=0;i<face.length;i++){
-                	var li="<li><img face-data="+face[i].title+" src="+face[i].url+"></li>";
-                	$('.face-box ul').append(li);
+        
+        function startInit(user,targetId){
+            //取得用户TOKEN
+            var userToken = '';
+            $.ajax({
+                url: window.__sealtalk_config.serverUrl + "/user/get_token",
+                data: "token=" + getQueryString('token'),//取得URL上的TOKEN给服务端处理
+                type: 'GET',
+                dataType: 'json',
+                success: function(data){
+                    if(data.code == 200){
+                        userToken = data.result.token;
+                    }else{
+                        console.log('获取TOKEN失败!');
+                    }
+                },
+                error: function(){
+                }
+            }).then(function(){
+                var params = {
+                    appKey : window.__sealtalk_config.appkey,
+                    token : userToken,
+                    navi : ''
                 };
+                var callbacks = {
+                    getInstance : function(instance){
+                            // RongIMLib.RongIMEmoji.init();
 
-                $('.face-box ul li').click(function(){
-                	var url=$(this).find('img').attr('src');
-                	var img="<img src="+url+">"
-                	$('.socket-input .input').append(img);
-                	$('.face-box').hide();
-                });
+                            //获取列表，待改为保存到本地设置一定过期时间
+                            instance.getConversationList({
+                            onSuccess: function(list) {
+                                console.log(list);
+                                //取得列表，处理页面展示
+                            },
+                            onError: function(error) {
+                                //列表获取失败应该处理什么？
+                            }
+                        },null);
 
-                /*在线咨询发送信息*/
-                $('.socket-input button').click(function(){
-                	var txt=$('.socket-input .input').html();
-					if(txt!=""){
-						var li="<li><span>"+txt+"</span></li>";
-						$('.socket-info ul').append(li);
-						$('.socket-input .input').html('');
-					}
-					$(".socket-info").scrollTop($(".socket-info")[0].offsetHeight);
-					return false;
-                })
+                        //instance.sendMessage
+                    },
+                    getCurrentUser : function(userInfo){
+                        console.log(userInfo.userId);
+                        alert("链接成功；userid=" + userInfo.userId);
+                        //连接成功初始处理
+                    },
+                    receiveNewMessage : function(message){
+                        //接收信息处理
+                    }
+                };
+                init(params,callbacks);
+            });
+        }
 
-                startInit();
-			 })
-		</script>
+        //发送信息
+        function sendTextMessage(){
+            /*
+            1: 单条消息整体不得大于128K
+            2: conversatinType 类型是 number，targetId 类型是 string
+            */
+            var conversationtype = RongIMLib.ConversationType.PRIVATE;
+            var targetId = "GW00104713";
+
+            var content = {
+                // content:"hello " + encodeURIComponent('π，α，β'),
+                content:"test",
+                user : {
+                    "userId" : 'GW78829820',
+                    "name" : "张三",
+                    "portraitUri" : "http://rongcloud.cn/images/newVersion/log_wx.png"
+                },
+                extra:{
+                    "name":"name",
+                    "age" : 12
+                }
+            };
+
+            var msg = new RongIMLib.TextMessage(content);
+
+            var start = new Date().getTime();
+            instance.sendMessage(conversationtype, targetId, msg, {
+                onSuccess: function (message) {
+                    console.log("发送文字消息成功",message,start);
+                },
+                onError: function (errorCode,message) {
+                    console.log(errorCode);
+                    console.log("发送文字消息失败",message,start);
+                }
+            });
+        }
+    </script>
+
+    <script>
+        $(function(){
+            /*在线咨询图片*/
+            $('#img_upload').change(function(){
+                var file=this.files[0];
+                var reader=new FileReader();
+                reader.readAsDataURL(file);
+                reader.onload=function(){
+                    var img="<img src='"+this.result+"'>";
+                    $('.socket-input .input').append(img);
+                }
+            })
+            /*在线咨询表情*/
+            $('.socket-face .face').click(function(){
+                $('.face-box').toggle();
+            });
+
+            for(var i=0;i<face.length;i++){
+                var li="<li><img face-data="+face[i].title+" src="+face[i].url+"></li>";
+                $('.face-box ul').append(li);
+            };
+
+            $('.face-box ul li').click(function(){
+                var url=$(this).find('img').attr('src');
+                var img="<img src="+url+">"
+                $('.socket-input .input').append(img);
+                $('.face-box').hide();
+            });
+
+            /*在线咨询发送信息*/
+            $('.socket-input button').click(function(){
+                var txt=$('.socket-input .input').html();
+                if(txt!=""){
+                    var li="<li><span>"+txt+"</span></li>";
+                    $('.socket-info ul').append(li);
+                    $('.socket-input .input').html('');
+                }
+                $(".socket-info").scrollTop($(".socket-info")[0].offsetHeight);
+                return false;
+            })
+
+            //初始化连接融云
+            startInit();
+            })
+    </script>
   </body>
 </html>
