添加表情功能，细节优化

--- a/SourceCode/im/index.html
+++ b/SourceCode/im/index.html
@@ -5,6 +5,7 @@
     <title>im</title>
     <script src="./static/js/RongIMLib-2.2.5.js"></script>
     <script src="./static/js/RongEmoji-2.2.5.js"></script>
+    <script src="./static/js/RongIMVoice-2.2.4.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
