--- a/SourceCode/im/index.html
+++ b/SourceCode/im/index.html
@@ -6,6 +6,9 @@
     <script src="./static/js/RongIMLib-2.2.5.js"></script>
     <script src="./static/js/RongEmoji-2.2.5.js"></script>
     <script src="./static/js/RongIMVoice-2.2.4.min.js"></script>
+    <script>
+      document.domain = 'gemall.com'
+    </script>
   </head>
   <body>
     <div id="app"></div>
