IE上传兼容性问题修复，字体函数兼容问题修复。BUG 24691，24737

--- a/SourceCode/htmlCode/index.html
+++ b/SourceCode/htmlCode/index.html
@@ -109,7 +109,7 @@
 								</ul>
 							</div>
 							<span class="face socket-icon"></span>
-							<span class="price socket-icon"><input type="file" id="img_upload"/></span>
+							<span class="price socket-icon"><input  class="fileInput" type="file" id="img_upload"/></span>
 						</div>
 						<div class="socket-input">
 							<form onsubmit="return false">
