--- a/SourceCode/im/index.html
+++ b/SourceCode/im/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>im</title>
-    <script src="./static/js/RongIMLib-2.2.5.js"></script>
-    <script src="./static/js/RongEmoji-2.2.5.js"></script>
-    <script src="./static/js/RongIMVoice-2.2.4.min.js"></script>
+    <script src="/static/js/RongIMLib-2.2.5.js"></script>
+    <script src="/static/js/RongEmoji-2.2.5.js"></script>
+    <script src="/static/js/RongIMVoice-2.2.4.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
